fix: link too close to bottom

--- a/src/Components/Result.css
+++ b/src/Components/Result.css
@@ -11,6 +11,7 @@
 
 .Result a{
     font-size: var(--smallText);
+    margin-bottom: 50px;
 }
 
 #card{
